přidání stylů a úprava stránek

--- a/src/main/resources/templates/courses_list.html
+++ b/src/main/resources/templates/courses_list.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Demo App</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}" />
 </head>
 <body>
 <h1>List of All Courses</h1>
