--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>Forbidden</title>
+  <link rel="stylesheet" type="text/css" th:href="@{/styles.css}" />
 </head>
 <body>
 <h1>403 - Forbidden</h1>
