--- a/src/main/resources/templates/users_add.html
+++ b/src/main/resources/templates/users_add.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>My Demo App</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}" />
 </head>
 <body>
 <h1 th:text="${user.id == 0 ? 'New User' : 'Edit User'}"></h1>
 
 <form method="post" th:action="@{/users/save}" th:object="${user}">
     <input type="hidden" th:field="*{id}">
-    Name: <input type="text" th:field="*{name}">
+    Name: <input type="text" th:field="*{name}"><br>
+    Email: <input type="text" th:field="*{email}"><br>
+    Username: <input type="text" th:field="*{username}"><br>
+    Password: <input type="password" th:field="*{password}"><br>
+    Role: <select th:field="*{role}">
+    <option value="USER">USER</option>
+    <option value="ADMIN">ADMIN</option>
+</select><br>
     <input type="submit" value="Save">
 </form>
 
