--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Login</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}" />
+    <title>Modelmate - Login</title>
+    <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
-<h2>Login</h2>
-<div th:if="${param.error}">
-    Invalid username and password.
-</div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
-<form th:action="@{/login}" method="post">
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"/>
+<header>
+    <h1>Modelmate</h1>
+</header>
+<main>
+    <h2>Login</h2>
+    <div th:if="${param.error}">
+        <p class="error">Invalid username and password.</p>
     </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"/>
+    <div th:if="${param.logout}">
+        <p class="success">You have been logged out.</p>
     </div>
-    <div>
-        <input type="submit" value="Login" class="button"/>
-    </div>
-</form>
+    <form th:action="@{/login}" method="post">
+        <p>
+            <label>Username:</label>
+            <input type="text" name="username"/>
+        </p>
+        <p>
+            <label>Password:</label>
+            <input type="password" name="password"/>
+        </p>
+        <button type="submit">Login</button>
+    </form>
+</main>
 </body>
 </html>
