--- a/src/main/resources/templates/models_detail.html
+++ b/src/main/resources/templates/models_detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>Modelmate - Model Details</title>
+    <title>Modelmate - Models</title>
     <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
@@ -11,9 +11,12 @@
         <a href="/models/">Home (Models)</a> |
         <a href="/colors/">Colors List</a> |
         <a href="/chemicals/">Chemicals List</a> |
-        <a href="/users/">Users</a> |
-        <a href="/admin">Admin Section</a> |
-        <a href="/logout">Logout</a>
+        <a href="/users/" sec:authorize="hasRole('ROLE_ADMIN')">Users |</a>
+        <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')">Admin Section |</a>
+        <form th:action="@{/logout}" method="post" style="display: inline;">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+            <button type="submit" class="nav-button">Logout</button>
+        </form>
     </nav>
 </header>
 <main>
