--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>Modelmate</title>
+    <title>Modelmate - Models</title>
     <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
@@ -11,15 +11,20 @@
         <a href="/models/">Home (Models)</a> |
         <a href="/colors/">Colors List</a> |
         <a href="/chemicals/">Chemicals List</a> |
-        <a href="/users/">Users</a> |
-        <a href="/admin">Admin Section</a> |
-        <a href="/logout">Logout</a>
+        <a href="/users/" sec:authorize="hasRole('ROLE_ADMIN')">Users |</a>
+        <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')">Admin Section |</a>
+        <form th:action="@{/logout}" method="post" style="display: inline;">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+            <button type="submit" class="nav-button">Logout</button>
+        </form>
     </nav>
 </header>
 <main>
-    <h2>Welcome to Modelmate</h2>
-    <p>This is a platform for modelers to manage their models, colors, and chemicals.</p>
-    <p><a href="/models/">View Your Models</a></p>
+    <p><a th:href="@{/models/}">View Models</a></p>
+    <form th:action="@{/logout}" method="post" style="display: inline;">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        <button type="submit">Logout</button>
+    </form>
 </main>
 </body>
 </html>
