--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,11 @@
     <div th:if="${param.logout}">
         <p class="success">You have been logged out.</p>
     </div>
+    <div th:if="${param.expired}">
+        <p class="error">Your session has expired. Please log in again.</p>
+    </div>
     <form th:action="@{/login}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <p>
             <label>Username:</label>
             <input type="text" name="username"/>
