--- a/src/main/resources/templates/users_add.html
+++ b/src/main/resources/templates/users_add.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
-    <title>My Demo App</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}" />
+    <title>Modelmate - Models</title>
+    <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
+<header>
+    <h1>Modelmate</h1>
+    <nav>
+        <a href="/models/">Home (Models)</a> |
+        <a href="/colors/">Colors List</a> |
+        <a href="/chemicals/">Chemicals List</a> |
+        <a href="/users/" sec:authorize="hasRole('ROLE_ADMIN')">Users |</a>
+        <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')">Admin Section |</a>
+        <form th:action="@{/logout}" method="post" style="display: inline;">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+            <button type="submit" class="nav-button">Logout</button>
+        </form>
+    </nav>
+</header>
 <h1 th:text="${user.id == 0 ? 'New User' : 'Edit User'}"></h1>
 
 <form method="post" th:action="@{/users/save}" th:object="${user}">
