--- a/src/main/resources/templates/chemicals_detail.html
+++ b/src/main/resources/templates/chemicals_detail.html
@@ -24,6 +24,11 @@
     <p><strong>Name:</strong> <span th:text="${chemical.name}">Chemical Name</span></p>
     <p><strong>Brand:</strong> <span th:text="${chemical.brand}">Brand</span></p>
     <p><strong>Type:</strong> <span th:text="${chemical.type}">Type</span></p>
+    <p sec:authorize="hasRole('ROLE_ADMIN')">
+        <strong>Created by:</strong>
+        <span th:if="${color.user != null}" th:text="${color.user.name}">Autor</span>
+        <span th:if="${color.user == null}">Neznámý uživatel</span>
+    </p>
     <a th:href="@{/chemicals/{id}/edit(id=${chemical.id})}">Edit Chemical</a>
     <a th:href="@{/chemicals/{id}/delete(id=${chemical.id})}">Delete Chemical</a>
     <a href="/chemicals/">Back to Chemicals List</a>
