--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="cs" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modelmate - List of All Models</title>
+  <title>Modelmate - Seznam všech modelů</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css">
 </head>
@@ -12,30 +12,30 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/models/">Modelmate</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Přepnout navigaci">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/models/">Home (Models)</a>
+            <a class="nav-link" href="/models/">Domů (Modely)</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/colors/">Colors List</a>
+            <a class="nav-link" href="/colors/">Seznam barev</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/chemicals/">Chemicals List</a>
+            <a class="nav-link" href="/chemicals/">Seznam chemikálií</a>
           </li>
           <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-            <a class="nav-link" href="/users/">Users</a>
+            <a class="nav-link" href="/users/">Uživatelé</a>
           </li>
           <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-            <a class="nav-link" href="/admin">Admin Section</a>
+            <a class="nav-link" href="/admin">Administrace</a>
           </li>
           <li class="nav-item">
             <form th:action="@{/logout}" method="post" class="d-inline">
               <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-              <button type="submit" class="btn btn-danger btn-sm ms-2">Logout</button>
+              <button type="submit" class="btn btn-danger btn-sm ms-2">Odhlásit se</button>
             </form>
           </li>
         </ul>
@@ -44,9 +44,9 @@
   </nav>
 </header>
 <main class="container">
-  <h2>403 - Forbidden</h2>
-  <p class="error">Sorry, you don't have permission to access this page.</p>
-  <a href="/models/" class="btn btn-secondary mt-3">Back to Home</a>
+  <h2>403 - Zakázáno</h2>
+  <p class="error">Omlouváme se, nemáte oprávnění pro přístup na tuto stránku.</p>
+  <a href="/models/" class="btn btn-secondary mt-3">Zpět na hlavní stránku</a>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
