--- a/src/main/resources/templates/chemicals_add.html
+++ b/src/main/resources/templates/chemicals_add.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="cs" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelmate - List of All Models</title>
+    <title>Modelmate - Seznam všech modelů</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
 </head>
@@ -12,30 +12,30 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/models/">Modelmate</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Přepnout navigaci">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/models/">Home (Models)</a>
+                        <a class="nav-link" href="/models/">Domů (Modely)</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/colors/">Colors List</a>
+                        <a class="nav-link" href="/colors/">Seznam barev</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/chemicals/">Chemicals List</a>
+                        <a class="nav-link" href="/chemicals/">Seznam chemikálií</a>
                     </li>
                     <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a class="nav-link" href="/users/">Users</a>
+                        <a class="nav-link" href="/users/">Uživatelé</a>
                     </li>
                     <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a class="nav-link" href="/admin">Admin Section</a>
+                        <a class="nav-link" href="/admin">Administrace</a>
                     </li>
                     <li class="nav-item">
                         <form th:action="@{/logout}" method="post" class="d-inline">
                             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                            <button type="submit" class="btn btn-danger btn-sm ms-2">Logout</button>
+                            <button type="submit" class="btn btn-danger btn-sm ms-2">Odhlásit se</button>
                         </form>
                     </li>
                 </ul>
@@ -44,27 +44,27 @@
     </nav>
 </header>
 <main class="container">
-    <h2 th:text="${chemical.id} ? 'Edit Chemical' : 'Add New Chemical'">Add New Chemical</h2>
+    <h2 th:text="${chemical.id} ? 'Upravit chemikálii' : 'Přidat novou chemikálii'">Přidat novou chemikálii</h2>
     <form th:action="@{/chemicals/save}" th:object="${chemical}" method="post" class="card">
         <div class="card-body">
             <input type="hidden" th:field="*{id}"/>
             <div>
-                <label for="name">Name:</label>
+                <label for="name">Název:</label>
                 <input type="text" id="name" th:field="*{name}" />
                 <div th:if="${#fields.hasErrors('name')}" class="error" th:errors="*{name}"></div>
             </div>
             <div>
-                <label for="brand">Brand:</label>
+                <label for="brand">Značka:</label>
                 <input type="text" id="brand" th:field="*{brand}" />
                 <div th:if="${#fields.hasErrors('brand')}" class="error" th:errors="*{brand}"></div>
             </div>
             <div>
-                <label for="type">Type:</label>
+                <label for="type">Typ:</label>
                 <input type="text" id="type" th:field="*{type}" />
                 <div th:if="${#fields.hasErrors('type')}" class="error" th:errors="*{type}"></div>
             </div>
-            <button type="submit" class="btn btn-primary">Save</button>
-            <a href="/chemicals/" class="btn btn-secondary ms-2">Back to Chemicals List</a>
+            <button type="submit" class="btn btn-primary">Uložit</button>
+            <a href="/chemicals/" class="btn btn-secondary ms-2">Zpět na seznam chemikálií</a>
         </div>
     </form>
 </main>
