--- a/src/main/resources/templates/colors_detail.html
+++ b/src/main/resources/templates/colors_detail.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="cs" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelmate - Color Details</title>
+    <title>Modelmate - Detail barvy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
 </head>
@@ -12,30 +12,30 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/models/">Modelmate</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Přepnout navigaci">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/models/">Home (Models)</a>
+                        <a class="nav-link" href="/models/">Domů (Modely)</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/colors/">Colors List</a>
+                        <a class="nav-link" href="/colors/">Seznam barev</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/chemicals/">Chemicals List</a>
+                        <a class="nav-link" href="/chemicals/">Seznam chemikálií</a>
                     </li>
                     <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a class="nav-link" href="/users/">Users</a>
+                        <a class="nav-link" href="/users/">Uživatelé</a>
                     </li>
                     <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a class="nav-link" href="/admin">Admin Section</a>
+                        <a class="nav-link" href="/admin">Administrace</a>
                     </li>
                     <li class="nav-item">
                         <form th:action="@{/logout}" method="post" class="d-inline">
                             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                            <button type="submit" class="btn btn-danger btn-sm ms-2">Logout</button>
+                            <button type="submit" class="btn btn-danger btn-sm ms-2">Odhlásit se</button>
                         </form>
                     </li>
                 </ul>
@@ -44,21 +44,21 @@
     </nav>
 </header>
 <main class="container">
-    <h2>Color Details</h2>
+    <h2>Detail barvy</h2>
     <div class="card">
         <div class="card-body">
-            <p><strong>Name:</strong> <span th:text="${color.name}">Color Name</span></p>
-            <p><strong>Brand:</strong> <span th:text="${color.brand}">Brand</span></p>
-            <p><strong>Code:</strong> <span th:text="${color.code}">Code</span></p>
+            <p><strong>Název:</strong> <span th:text="${color.name}">Název barvy</span></p>
+            <p><strong>Značka:</strong> <span th:text="${color.brand}">Značka</span></p>
+            <p><strong>Kód:</strong> <span th:text="${color.code}">Kód</span></p>
             <p sec:authorize="hasRole('ROLE_ADMIN')">
-                <strong>Created by:</strong>
+                <strong>Vytvořil:</strong>
                 <span th:if="${color.user != null}" th:text="${color.user.name}">Autor</span>
                 <span th:if="${color.user == null}">Neznámý uživatel</span>
             </p>
             <div>
-                <a th:href="@{/colors/{id}/edit(id=${color.id})}" class="btn btn-primary">Edit Color</a>
-                <a th:href="@{/colors/{id}/delete(id=${color.id})}" class="btn btn-danger ms-2">Delete Color</a>
-                <a href="/colors/" class="btn btn-secondary ms-2">Back to Colors List</a>
+                <a th:href="@{/colors/{id}/edit(id=${color.id})}" class="btn btn-primary">Upravit barvu</a>
+                <a th:href="@{/colors/{id}/delete(id=${color.id})}" class="btn btn-danger ms-2">Smazat barvu</a>
+                <a href="/colors/" class="btn btn-secondary ms-2">Zpět na seznam barev</a>
             </div>
         </div>
     </div>
