--- a/src/main/resources/templates/colors_list.html
+++ b/src/main/resources/templates/colors_list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="cs" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelmate - List of All Colors</title>
+    <title>Modelmate - Seznam všech barev</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
 </head>
@@ -12,30 +12,30 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/models/">Modelmate</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Přepnout navigaci">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/models/">Home (Models)</a>
+                        <a class="nav-link" href="/models/">Domů (Modely)</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/colors/">Colors List</a>
+                        <a class="nav-link" href="/colors/">Seznam barev</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/chemicals/">Chemicals List</a>
+                        <a class="nav-link" href="/chemicals/">Seznam chemikálií</a>
                     </li>
                     <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a class="nav-link" href="/users/">Users</a>
+                        <a class="nav-link" href="/users/">Uživatelé</a>
                     </li>
                     <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a class="nav-link" href="/admin">Admin Section</a>
+                        <a class="nav-link" href="/admin">Administrace</a>
                     </li>
                     <li class="nav-item">
                         <form th:action="@{/logout}" method="post" class="d-inline">
                             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                            <button type="submit" class="btn btn-danger btn-sm ms-2">Logout</button>
+                            <button type="submit" class="btn btn-danger btn-sm ms-2">Odhlásit se</button>
                         </form>
                     </li>
                 </ul>
@@ -44,28 +44,28 @@
     </nav>
 </header>
 <main class="container">
-    <h2>List of All Colors</h2>
-    <a href="/colors/add" class="btn btn-primary mb-3">Add New Color</a>
+    <h2>Seznam všech barev</h2>
+    <a href="/colors/add" class="btn btn-primary mb-3">Přidat novou barvu</a>
     <table class="table">
         <thead>
         <tr>
-            <th>No</th>
-            <th>Name</th>
-            <th>Brand</th>
-            <th>Code</th>
-            <th>Actions</th>
+            <th>Č.</th>
+            <th>Název</th>
+            <th>Značka</th>
+            <th>Kód</th>
+            <th>Akce</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="color, iter : ${colors}">
-            <td th:text="${iter.count}">No</td>
-            <td th:text="${color.name}">Name</td>
-            <td th:text="${color.brand}">Brand</td>
-            <td th:text="${color.code}">Code</td>
+            <td th:text="${iter.count}">Č.</td>
+            <td th:text="${color.name}">Název</td>
+            <td th:text="${color.brand}">Značka</td>
+            <td th:text="${color.code}">Kód</td>
             <td>
-                <a th:href="@{/colors/{id}(id=${color.id})}" class="btn btn-primary btn-sm">View</a>
-                <a th:href="@{/colors/{id}/edit(id=${color.id})}" class="btn btn-primary btn-sm ms-1">Edit</a>
-                <a th:href="@{/colors/{id}/delete(id=${color.id})}" class="btn btn-danger btn-sm ms-1">Delete</a>
+                <a th:href="@{/colors/{id}(id=${color.id})}" class="btn btn-primary btn-sm">Zobrazit</a>
+                <a th:href="@{/colors/{id}/edit(id=${color.id})}" class="btn btn-primary btn-sm">Upravit</a>
+                <a th:href="@{/colors/{id}/delete(id=${color.id})}" class="btn btn-danger btn-sm">Smazat</a>
             </td>
         </tr>
         </tbody>
