--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="cs" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelmate - Login</title>
+    <title>Modelmate - Přihlášení</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 <main class="container">
-    <h2>Login</h2>
-    <div th:if="${param.error}" class="error">
-        Invalid username and password.
-    </div>
-    <div th:if="${param.logout}" class="success">
-        You have been logged out.
-    </div>
-    <div th:if="${param.expired}" class="error">
-        Your session has expired. Please log in again.
-    </div>
-    <form th:action="@{/login}" method="post" class="card">
-        <div class="card-body">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <div>
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username"/>
-            </div>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password"/>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
+    <div class="login-center">
+        <h2>Přihlášení</h2>
+        <div th:if="${param.error}" class="error">
+            Neplatné uživatelské jméno nebo heslo.
         </div>
-    </form>
+        <div th:if="${param.logout}" class="success">
+            Byli jste odhlášeni.
+        </div>
+        <div th:if="${param.expired}" class="error">
+            Vaše relace vypršela. Přihlaste se prosím znovu.
+        </div>
+        <form th:action="@{/login}" method="post" class="card login-form">
+            <div class="card-body">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <div>
+                    <label for="username">Uživatelské jméno:</label>
+                    <input type="text" id="username" name="username"/>
+                </div>
+                <div>
+                    <label for="password">Heslo:</label>
+                    <input type="password" id="password" name="password"/>
+                </div>
+                <button type="submit" class="btn btn-primary">Přihlásit se</button>
+            </div>
+        </form>
+    </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
